# memoria

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  Dockerfile  EVOLUTION.md  LICENSE  README.md  README_CN.md  build.rs  docker-compose.yml  embed_server.py
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: DESIGN_MEMORY_PROFILE_AND_GRAPH.md  EXPOSURE_CHECKLIST.md  MEMORIA_INTEL_HY3_EXEC.md  OPTIMIZATION_HMS_ABSORPTION.md  OPTIMIZATION_OPENCLAW_ABSORPTION.md  PYO3.md  ROADMAP.md
docs/evidence/: dept-document-ingest-2026-07-23.md  graph-detail-not-found-2026-07-23.md
eval/cases/: cases.json  corpus.json
examples/: claude-desktop.json  cursor.json  python-minimal-client.py
src/: auth.rs  backup.rs  document.rs  health.rs  lib.rs  main.rs  mcp_server.rs  permissions.rs  quota.rs  session_watcher.rs  web_api.rs
src/search/: cooccur.rs  hybrid.rs  importance.rs  keyword.rs  mod.rs  rrf.rs  semantic.rs  temporal.rs  text_signals.rs
src/storage/: fts5.rs  mod.rs  models.rs  sqlite.rs
src/tools/: decay.rs  evolve.rs  graph.rs  imp_exp.rs  ledger.rs  mod.rs  observe.rs  prefs.rs  profile.rs  remember.rs  self_evolution.rs
src/vector/: embedding.rs  hnsw.rs  mod.rs  persist.rs
tests/: a2a.rs  as_of.rs  dream.rs  entity_graph.rs  eval.rs  evolution.rs  import_export.rs  near_dup.rs  p0_hms_absorption.rs  p0_profile.rs  p0_supersede.rs  p1_hms_phase_b.rs  p2_hms_text_signals.rs  quota.rs  user_prefs.rs
web/: changelog.json  dashboard.js  flow.html  index.html  intro.html  readme.html  timeline.html
