[package]
name = "memoria-core"
version = "0.2.0"
edition = "2021"
description = "Independent memory center for AI agents — MCP protocol, Rust-native"
license = "MIT"
repository = "https://github.com/memoria-ai/memoria"
keywords = ["mcp", "ai", "memory", "agent", "vector-search"]
categories = ["database", "web-programming::http-server"]

[lib]
name = "memoria_core"
crate-type = ["rlib"]

[[bin]]
name = "memoria-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
hnsw_rs = "0.3"
jieba-rs = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
lru = "0.12"
sha2 = "0.10"
getrandom = "0.2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
python = ["dep:pyo3"]

[dependencies.pyo3]
version = "0.29"
features = ["extension-module"]
optional = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
