[package]
name = "memoria-core"
version = "0.3.0"
edition = "2024"
description = "Independent memory center for AI agents — MCP protocol, Rust-native"
license = "MIT"
repository = "https://github.com/jiayan-xu/memoria"
keywords = ["mcp", "ai", "memory", "agent", "vector-search"]
categories = ["database", "web-programming::http-server"]

[lib]
name = "memoria_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "memoria-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
hnsw_rs = "0.3"
jieba-rs = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
lru = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
# 部门共享文档：PDF/DOCX 抽文本（P0，扫描件 PDF 明确失败）
pdf-extract = "0.7"
zip = "2"
quick-xml = "0.36"
calamine = "0.23"
pyo3 = { version = "0.29", features = ["extension-module"], optional = true }
# 诊断依赖：仅 --features diag 时编译进二进制（默认不开启，不影响生产）
console-subscriber = { version = "0.4", optional = true }

[features]
# P2-7：生产默认不链 PyO3。需要 Python 绑定时显式：
#   cargo build --release --features python
# 纯 HTTP MCP 部署用默认即可（memoria-server 不依赖 python feature）。
default = []
python = ["pyo3"]
# 诊断构建：暴露 tokio 任务级栈（需 RUSTFLAGS="--cfg tokio_unstable"）
diag = ["console-subscriber"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
